# chatbot-ollama

./: .gitignore  README.md  flowchart.py  poetry_cheetdheet.md  pyproject.toml  rxconfig.py  uv_cheatsheet.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/chatbot_ollama/: main.py  pdf_loader.py
src/chatbot_ollama/static/: popup.js
src/chatbot_ollama/templates/: index.html
src/frontends/: gradio_ui.py  nicegui_ui.py  streamlit_popup.py  streamlit_ui.py
src/langgraph_chain/: Readme.md  basic_graph.py  frontend.py  graph_rag.py
src/langserve_app/: Readme.md  groq_chain.py  langserve_api.py  langserve_frontend.py  pdf_loader.py  serve.py  workflow.py
src/reflex_app/: reflex_app.py
